Fix DCHECK when track status changes in non-playing state

Reland of https://codereview.chromium.org/2269313002
That CL added a new unit test TrackStatusChangesWhileSuspended that
turned out to be flaky. I have investigated the flakiness and tracked
it down to a race condition in Renderer destruction when pipeline is
being suspended. That race condition has been recently fixed (see
https://codereview.chromium.org/2355173002 and crbug.com/638018) and
the new test is not flaky anymore. I've confirmed that the test becomes
flaky again when I revert commit bdf51ba921ccbc locally.

BUG=640362

Review-Url: https://codereview.chromium.org/2378893002
Cr-Commit-Position: refs/heads/master@{#421669}

Former-commit-id: 09ed890b572504e099b9e974c29c69d168881a6a